@@ -35,7 +35,7 @@ $GLOBALS['TL_LANG']['tl_iso_config']['fallback']					= array('Standard-Konfigura
 $GLOBALS['TL_LANG']['tl_iso_config']['missing_image_placeholder']	= array('Platzhalter-Bild für Produkte', 'Dieses Bild wird verwendet wenn für ein Produkt kein Bild vorhanden ist.');
 $GLOBALS['TL_LANG']['tl_iso_config']['priceCalculateFactor']		= array('Berechnungsfaktor', 'Standardmässig auf 1. Wählen Sie einen anderen Faktor für eine Umrechnung.');
 $GLOBALS['TL_LANG']['tl_iso_config']['priceCalculateMode']			= array('Berechnungsmodus', 'Preis dividieren oder multiplieren mit dem Faktor.');
-$GLOBALS['TL_LANG']['tl_iso_config']['priceRoundPrecision']			= array('Rundungspräzision', 'Wählen Sie die Dezimal-Präzision. Wird nur verwendet wenn der Berechnungsfaktor ungleich 1 ist. Lesen Sie dazu auch das PHP-Handbuch zur Funktion round().');
+$GLOBALS['TL_LANG']['tl_iso_config']['priceRoundPrecision']			= array('Rundungspräzision', 'Wählen Sie die Dezimal-Präzision. Sie sollten einen Wert zwischen 0 und 2 verwenden, um Kompatibilität mit allen Zahlungsmodulen zu gewährleisten.');
 $GLOBALS['TL_LANG']['tl_iso_config']['priceRoundIncrement']			= array('Rundungszuschlag', 'Einige Währungen (z.B. Schweizer Franken) erlauben keine 0.01 Beträge.');
 $GLOBALS['TL_LANG']['tl_iso_config']['currency']					= array('Währung', 'Wählen Sie eine Währung für diesen Shop.');
 $GLOBALS['TL_LANG']['tl_iso_config']['currencySymbol']				= array('Währungssymbol verwenden', 'Das Währungssymbol verwenden ($, €) falls möglich.');
