@@ -36,7 +36,7 @@ $GLOBALS['TL_LANG']['tl_iso_config']['store_id']						= array('Store ID', 'Use d
 $GLOBALS['TL_LANG']['tl_iso_config']['missing_image_placeholder']		= array('Missing Image Placeholder', 'This image will be used if an image file cannot be found or none are associated with a product.');
 $GLOBALS['TL_LANG']['tl_iso_config']['priceCalculateFactor']			= array('Price factor', 'Defaults should be 1. You can use this to convert between multiple currencies.');
 $GLOBALS['TL_LANG']['tl_iso_config']['priceCalculateMode']				= array('Calculation mode', 'Divide or multiply using this factor.');
-$GLOBALS['TL_LANG']['tl_iso_config']['priceRoundPrecision']				= array('Rounding precision', 'How much decimal precicion to have. Only applies if price multiplier is not 1. See PHP manual for round().');
+$GLOBALS['TL_LANG']['tl_iso_config']['priceRoundPrecision']				= array('Rounding precision', 'How much decimal precicion to have. You should set something between 0 and 2 for all payment gateways to work correctly. See PHP manual for round().');
 $GLOBALS['TL_LANG']['tl_iso_config']['priceRoundIncrement']				= array('Rounding increment', 'Some currencies (eg. swiss francs) do not support 0.01 precicion.');
 $GLOBALS['TL_LANG']['tl_iso_config']['currency']						= array('Currency', 'Please select a currency for this store.');
 $GLOBALS['TL_LANG']['tl_iso_config']['currencySymbol']					= array('Use currency symbol', 'Use a currency symbol ($, €) if available.');
